<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/person_name"
            android:id="@+id/personEditText" android:layout_gravity="center" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/buttonTwo" android:layout_gravity="center"
            android:onClick="savePerson"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/buttonBack" android:layout_gravity="center"
            android:onClick="backToMenu"/>

</LinearLayout>